[build-system]
requires = ["setuptools~=68.2.0", "setuptools_scm~=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ps6000a"
authors = [{name = "Marcus Engineering, LLC"}]
urls = {source = "https://github.com/Marcus-Engineering/ps6000a"}
description = "PicoScope 6000E Driver"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10.0"
dependencies = []
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Topic :: System :: Hardware :: Hardware Drivers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
	"black-with-tabs~=22.10.0",
	"build~=1.1.1",
	"flake8~=7.0.0",
	"flake8-docstrings~=1.7.0",
	"flake8-isort~=6.1.1",
	"flake8-noqa~=1.4.0",
	"isort~=5.13.2",
	"mypy~=1.9.0",
	"mypy-extensions~=1.0.0",
	"pep8-naming~=0.13.3",
	"pydocstyle~=6.3.0",
	"pytest~=8.1.1",
	"setuptools~=68.2.0",
	"setuptools_scm~=8.0.4",
	"sphinx~=5.3.0",
	"types-setuptools~=69.2.0.20240317",
	"typing-extensions~=4.10.0",
	"wheel~=0.43.0",

	"numpy~=1.26.4",
	"matplotlib~=3.8.3"
]
plot = [
	"numpy~=1.26.4",
	"matplotlib~=3.8.3"
]

[tool.setuptools]
packages = [
	"ps6000a",
]
include-package-data = true

[tool.setuptools.package-data]
ps6000a = [
	"py.typed",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
